# GymDash

./: .gitignore  LICENSE  MANIFEST.in  README.md  api.bat  cartpole_test_train.py  custom_sb_simulation_test.py  package_install_test_basic.py  package_install_test_full.py  pyproject.toml  run_tests.py  start.py  stock_tensorboard.py  stock_test_val.py  testserve.py  tracking.txt
designs/: api.txt  frontend.txt  layout.txt  simulations.txt
docs/pages/: intro.md
docs/pages/backend/: 01-project.md  02-simulations.md
docs/pages/frontend/: 01-sidebar.md  02-control.md  03-analyze.md  04-configs.md
docs/pages/getting_started/: 01-first_steps.md  02-controls.md  03-examples.md
docs/vids/: example_1.mkv  example_2.mkv  mnist1.mkv  mnist2.mkv  usage_frontend_analyze.mkv
example/: custom_sb_simulation.py
src/api/: api.py  api_models.py  api_utils.py  api_utils_thread.py  config.py  simulation.py
src/api/internals/: stat_tags.py  usage.py  wrapper_utils.py
src/api/utils/: file_format.py
src/frontend/: index.html
src/frontend/scripts/: gymdash.js  gymdash_link.js
src/frontend/styles/: dashboard.css
src/gymdash/: start.py
src/gymdash/backend/: constants.py  enums.py  main.py  project.py
src/gymdash/frontend/: index.html
src/scripts/: start_utils.py
src/simulation/logging/: SyncStream.py  callbacks.py  wrappers.py
tests/custom_test_scripts/: package_install_test_basic.py  package_install_test_full.py
tests/gymdash/: file_format.py  simulation.py
tests/stock/: StockTradingEnv.py  train.py  validate.py
tests/utils/: file_format.py
(+74 files in other folders)
