[project]
name = "gymdash"
version = "0.0.1"
authors = [
  { name="Chase Vickery", email="chasedvickery@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ChaseDVickery/GymDash"
Issues = "https://github.com/ChaseDVickery/GymDash/issues"